Fixing paragaph

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
+/*Top half elements */
+
 body {
   font-family: 'Arial' san-serif;
   background-color: white;
+  padding: 0;
+  margin: 0;
 }
 
 #wrapper {
@@ -17,10 +21,16 @@ header {
 }
 
 header h1 {
+  position: fixed;
+  top: -14px;
+  left: 162px;
   text-transform: uppercase;
-  text-align: center;
-  color: #4aaaa5;
+  text-align: left;
+  background: #4aaaa5;
+  color: white;
   line-height: 50px;
+  border: solid lightgrey;
+  padding-right: 50px;
 }
 
 .main_menu {
@@ -38,6 +48,7 @@ ul.main_menu {
   display: inline;
   padding: 0 10px 0 10px;
   font-size: 16px;
+  float: right;
 }
 
 .main_menu a {
@@ -51,6 +62,77 @@ ul.main_menu {
 .main_menu a:hover {
   color: red;
 }
+
+.nav:hover {
+  color: red;
+}
+/*Content of the page with paragraphs */
+
+.content {
+  width: 960px;
+  margin: 0 auto;
+}
+
+#maindiv::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+#about {
+  float: right;
+  border: 3px solid black;
+  background-color: #fff;
+  margin-bottom: 40px;
+  width: 610px;
+  padding: 20px;
+  overflow: auto;
+  display: inline;
+}
+
+.img1 {
+  float: left;
+  margin: 10px 10px 10px 10px;
+  height: auto;
+}
+
+h2 {
+  margin: 10px 10px 10px 10px;
+  color: #4aaaa5;
+  text-transform: uppercase;
+  height: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Footer */
+#footer {
+  position: fixed;
+  width: 960px;
+  bottom: 0;
+  background: darkgrey;
+  color: white;
+  padding: 20px;
+  text-align: center
+  border: 8 0 0 0;
+  border-top: 5px solid #4aaaa5;
+  margin-left: -35px;
+}
+
+
 
 
 
